--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@types/styled-components": "^5.1.26",
+    "animate.css": "^4.1.1",
+    "axios": "^1.3.3",
+    "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.2.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "moment": "^2.29.4",
     "next": "13.1.6",
+    "prop-types": "^15.8.1",
+    "props": "^0.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.1.1",
+    "react-pro-sidebar": "^1.0.0",
+    "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
+    "styled-components": "^5.3.6"
   }
 }
