--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.1",
+    "react-otp-input": "^2.4.0",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.0",
