--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "props": "^0.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
