--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.1",
