--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "@types/styled-components": "^5.1.26",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.3.3",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.3",
